src/style.css
/* Variables */
:root {
  --gradient-purple: #6800ff;
  --gradient-pink: #ba00ff;
  --gradient: linear-gradient(0deg, var(--gradient-purple) 0%, var(--gradient-pink) 100%);
  --gradient-45deg: linear-gradient(-45deg, var(--gradient-purple) 0%, var(--gradient-pink) 100%);
  --gradient-gold: linear-gradient(-45deg, rgba(255, 199, 1, 1) 0%, rgba(255, 237, 0, 1) 100%);

  --primary-color: #9200ff;
  --bg-color: #fdfdfd;
  --bg-dark: #131313;

  --footer-link-color: #2871b6;

  --font-regular: 400;
  --font-semibold: 600;
  --font-bold: 700;
  --font-extra-bold: 800;

  --logo-size-normal: 2rem;
  --logo-size-small: 1.5rem;
  --section-padding: 1rem;
}

/* Resets */
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
  font-family: 'Inter', sans-serif;
}

body {
  line-height: 1.5;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

body {
  background-color: var(--bg-color);
}

.logo,
.metric-value {
  color: transparent;
  background: var(--gradient) text;
}

/* Background */
.hero-bg {
  --bg-darkness: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.5) 60%, rgba(0, 0, 0, 1) 100%);
  background: var(--bg-darkness) center, url(assets/Peliculas-Ready-Player-One.jpg) center / 798px;
}

/* Header */
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: var(--section-padding);

  max-width: 1440px;
  margin: auto;
}

.logo {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  font-family: 'Anton', 'Inter', sans-serif;
  font-size: var(--logo-size-normal);
}

.logo > svg {
  color: var(--primary-color);
  width: var(--logo-size-normal);
  height: var(--logo-size-normal);
}

#burger-btn,
#close-btn {
  border: none;
  background: transparent;
  color: white;

  > svg {
    --size: 32px;
    width: var(--size);
    height: var(--size);
  }
}

/* Navigation Bar */
nav {
  position: absolute;
  left: 0;
  top: -100%; /* Hide Navbar */
  width: 100%;
  padding: 16px;

  display: flex;
  flex-direction: column;
  text-align: center;

  background-color: var(--bg-dark);
}

#close-btn {
  align-self: end;
}

nav > ul {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 32px;
  padding: 0 10%;
}

/* Buttons */
.btn {
  display: inline-block;
  color: white;
  text-decoration: none;
  background: var(--gradient-45deg) border-box;
  font-size: 1rem;
  padding: 10px 24px;
  border: 2px solid transparent;
  border-radius: 10px;
  width: fit-content;

  transition: filter 0.2s;
}

.btn:hover {
  filter: brightness(0.8);
}

.btn.alt {
  background: none;
  border-color: white;
  transition: border-color 0.2s, color 0.2s;
}

.btn.alt:hover {
  filter: none;
  border-color: var(--primary-color);
  color: var(--primary-color);
}

/* Thinner Navbar buttons */
nav .btn {
  width: 100%;
  padding: 6px 24px;
}

section {
  --ph: var(--section-padding);
  padding-left: var(--ph);
  padding-right: var(--ph);

  text-align: center;
  margin-bottom: 4rem;
}

/* Hero Section */
#hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 4.5rem;

  padding: 3rem var(--section-padding) 5rem;
  max-width: 45rem;
  color: white;
}

.hero-img {
  display: none;
}

h1 {
  font-size: 2.25rem;
  font-weight: var(--font-extra-bold);
}

.hero-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
}

/* Metrics */
.metrics-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
  justify-content: center;
}

.metric {
  display: flex;
  flex-direction: column;
  max-width: 10em;
}

.metric-value {
  font-size: 2rem;
  font-weight: var(--font-semibold);
}

.metric-desc {
  font-size: 0.8rem;
}

h2 {
  font-size: 1.75rem;
  font-weight: var(--font-bold);
  margin-bottom: 2rem;
}

h3 {
  font-size: 1.5rem;
  font-weight: var(--font-semibold);
  margin-bottom: 1.5rem;
}

/* Watch Section */
.img-slider {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}

.slides-container {
  display: flex;
  gap: 0.5rem;
  overflow-x: scroll;
}

.slides-container > img {
  width: 128px;
  border-radius: 15px;
}

.slide-btn {
  display: flex;
  justify-content: center;
  align-items: center;

  width: 24px;
  height: 72px;
  flex-shrink: 0;

  border: none;
  background-color: #dbdada;
  border-radius: 10px;
}

.slide-btn > svg {
  width: 20px;
  height: 20px;
  color: #929292;
}

/* Benefits Section */
#benefits {
  padding: 0;
}

.benefit {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 4rem;

  background: var(--gradient-45deg);
  color: white;
  min-height: 640px;

  padding: 5.5rem var(--section-padding);
}

.benefit:nth-child(even) {
  background: var(--bg-dark);
}

.benefit img {
  width: min(80vw, 400px);
}

/* Pricing Section */
table {
  margin: auto;
  text-align: center;
  border-collapse: collapse;
}

tr:not(:first-child :last-child) {
  border-bottom: thin solid rgba(146, 146, 146, 0.3);
}

td,
th {
  padding: 1rem 0.5rem;
}

td {
  width: 8.5rem;
  font-size: 0.875rem;
  font-weight: var(--font-semibold);
}

th[scope='row'] {
  text-align: left;
  max-width: 25rem;
  padding-left: 1.5rem;
  font-weight: var(--font-regular);
}

.table-desktop th[scope='col']:nth-child(even),
.table-desktop td:nth-child(even) {
  background-color: rgba(146, 146, 146, 0.15);
}

.table-desktop th[scope='col'] {
  border-radius: 15px 15px 0 0;
}

.table-desktop tr:last-child > td {
  border-radius: 0 0 15px 15px;
}

.square {
  --size: 7rem;
  width: var(--size);
  height: var(--size);
  line-height: var(--size);

  color: white;
  margin: auto;
  border-radius: 10px;
}

.square.basic {
  background: var(--bg-dark);
}

.square.standard {
  background: var(--gradient-45deg);
}

.square.premium {
  background: var(--gradient-gold);
}

.table-desktop {
  display: none;
}

/* Mobile table */
.table-mobile {
  font-size: 0.875rem;
  margin-bottom: 3rem;
}

.table-mobile th[scope='colgroup'] > div {
  display: flex;
  justify-content: center;
  gap: 0.5rem;
}

.plan-btn {
  --size: 6.25rem;
  width: var(--size);
  height: var(--size);
  line-height: var(--size);

  background: none;
  border: 2px solid black;
  border-radius: 10px;

  font-size: 0.875;
  font-weight: var(--font-bold);
}

.plan-btn.selected {
  border: none;
  color: white;
}

#basic.plan-btn.selected {
  background-color: var(--bg-dark);
}

#standard.plan-btn.selected {
  background: var(--gradient-45deg);
}

#premium.plan-btn.selected {
  background: var(--gradient-gold);
}

/* CTA */
#cta h3 {
  font-size: 1.25rem;
}

#cta form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

input {
  padding: 10px 16px;
  width: 90%;
  border: 1px solid var(--bg-dark);
  border-radius: 10px;
  margin-bottom: 1rem;
}

/* Footer */
footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;

  text-align: center;

  background: var(--bg-dark);
  padding: 2rem 0 1.6rem;
}

.logo.small {
  font-size: var(--logo-size-small);
}

.logo.small > svg {
  width: var(--logo-size-small);
  height: var(--logo-size-small);
}

.links-container {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.links-container > a {
  color: var(--footer-link-color);
  transition: filter 0.1s;
}

.links-container > a:hover {
  filter: brightness(1.2);
}

.copyright {
  color: #666666;
}

@media (min-width: 720px) {
  :root {
    --logo-size-normal: 2.25rem;
    --logo-size-small: 2rem;
    --section-padding: 2rem;
  }

  /* Header */
  header {
    padding: 1.5rem var(--section-padding);
  }

  #burger-btn,
  #close-btn {
    display: none;
  }

  nav {
    position: static;
    padding: 0;
    background: none;
    width: fit-content;
  }

  nav > ul {
    flex-direction: row;
    gap: 1rem;
    margin: 0;
    padding: 0;
  }

  h1 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1000px) {
  :root {
    --section-padding: 4rem;
  }

  header {
    padding: 2rem var(--section-padding);
  }

  p {
    font-size: 1.125rem;
  }

  section {
    margin: 0 auto 6rem;
  }

  section:not(#benefits, #hero) {
    max-width: 1440px;
  }

  #hero {
    max-width: 1200px;
    gap: 7rem;
    padding-top: 4rem;
  }

  .hero-top {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 2rem;
    width: 100%;
  }

  .hero-text {
    text-align: left;
    max-width: 500px;
  }

  h1 {
    font-size: 3rem;
  }

  h2 {
    font-size: 2.25rem;
    margin-bottom: 2.5rem;
  }

  h3 {
    font-size: 2rem;
  }

  .hero-img {
    display: block;
    max-width: 450px;
  }

  .metrics-container {
    max-width: 25em;
    width: 100%;
    justify-items: center;
  }

  .metric-value {
    font-size: 2.25rem;
  }

  .metric-desc {
    font-size: 1rem;
  }
}

